--- a/toyproject/studentdb.ui
+++ b/toyproject/studentdb.ui
@@ -16,6 +16,11 @@
     <height>600</height>
    </size>
   </property>
+  <property name="font">
+   <font>
+    <family>D2Coding</family>
+   </font>
+  </property>
   <property name="windowTitle">
    <string>MainWindow</string>
   </property>
@@ -175,7 +180,7 @@
           </property>
           <layout class="QHBoxLayout" name="buttonArea">
            <item>
-            <widget class="QPushButton" name="btn_insert">
+            <widget class="QPushButton" name="btn_add">
              <property name="sizePolicy">
               <sizepolicy hsizetype="Minimum" vsizetype="MinimumExpanding">
                <horstretch>0</horstretch>
@@ -188,7 +193,7 @@
             </widget>
            </item>
            <item>
-            <widget class="QPushButton" name="btn_modify">
+            <widget class="QPushButton" name="btn_mod">
              <property name="sizePolicy">
               <sizepolicy hsizetype="Minimum" vsizetype="MinimumExpanding">
                <horstretch>0</horstretch>
@@ -201,7 +206,7 @@
             </widget>
            </item>
            <item>
-            <widget class="QPushButton" name="btn_delete">
+            <widget class="QPushButton" name="btn_del">
              <property name="sizePolicy">
               <sizepolicy hsizetype="Minimum" vsizetype="MinimumExpanding">
                <horstretch>0</horstretch>
@@ -222,7 +227,7 @@
      <item>
       <layout class="QHBoxLayout" name="horizontalLayout_2">
        <item>
-        <widget class="QTableWidget" name="tableWidget">
+        <widget class="QTableWidget" name="tblStudent">
          <property name="maximumSize">
           <size>
            <width>16777215</width>
